# llm-inference-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: download-model.sh  download_model.sh
src/: __init__.py
src/app/: main.py
src/app/api/v1/: endpoints.py  routes.py
src/app/core/: banner.py  config.py
src/app/schemas/: request.py  response.py
src/app/services/: inference_service.py
src/cli/: __init__.py  main.py
src/inference/: engine.py  prompt_templates.py
src/lib/core/: banner.py  config.py
